[tool.poetry]
name = "Istarion Base"
version = "0.1.0"
description = "Live chat based on websockets"
authors = ["Wojciech Batorski <wojbat4@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.12"
websockets = "15.0"
pydantic = "^2.11"
pydantic-settings = "^2.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
